# witty-rackspace-client

./: CMakeLists.txt  README.md  debug.sh  run.sh
app-root/: MainWindow.xml  witty-rackspace.xml  wtrs.xml
src/: Application.cpp  Application.hpp  MainWindow.cpp  MainWindow.hpp  main.cpp
src/client/: login.cpp  login.hpp
